Improve scaffolding